# CMake-Test

./: CMakeLists.txt  Loose.cpp  readme.txt
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h  func_2.cpp
CMakeProject1/ClangFormat/: ClangFormat.cpp
CMakeProject1/EditorConfig/: .editorconfig  EditorConfig.cpp
CMakeProject2/: CMakeLists.txt  CMakeProject2.cpp
CMakeProject3/: CMakeLists.txt  CMakeProject3.cpp
